--- a/app/src/main/res/layout/character_creator_page_two.xml
+++ b/app/src/main/res/layout/character_creator_page_two.xml
@@ -8,107 +8,107 @@
     tools:context=".CharacterCreatorPageTwo"
     tools:ignore="LabelFor">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/character_creator_page_two_flaws"
-        android:layout_width="413dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="20dp"
-        android:hint="Flaws"
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="180dp"
+        android:layout_height="65dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_two_ideals" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.174" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/character_creator_page_two_about"
-        android:layout_width="409dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="300dp"
-        android:hint="About"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+    <Button
+        android:id="@+id/character_creator_page_two_back_button"
+        android:layout_width="75dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="1dp"
+        android:padding="0dp"
+        android:text="back"
+        android:textAlignment="center"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/character_creator_page_two_bonds"
-        android:layout_width="405dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="20dp"
-        android:hint="Bonds"
-        app:layout_constraintEnd_toEndOf="@id/character_creator_page_two_personality"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_two_personality" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/character_creator_page_two_ideals"
-        android:layout_width="407dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="20dp"
-        android:hint="Ideals"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_two_bonds" />
-
     <Spinner
-        android:id="@+id/character_creator_page_two_background"
-        android:layout_width="271dp"
-        android:layout_height="62dp"
-        android:entries="@array/backgrounds"
+        android:id="@+id/spinner"
+        android:layout_width="178dp"
+        android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131"
-        />
-
-    <Spinner
-        android:id="@+id/character_creator_page_two_alignment"
-        android:layout_width="271dp"
-        android:layout_height="62dp"
-        android:entries="@array/personality"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.007"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.224" />
+        app:layout_constraintVertical_bias="0.084" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/character_creator_page_two_personality"
+        android:id="@+id/textInputEditText"
         android:layout_width="408dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="56dp"
         android:hint="Personality Traits"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_two_about" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.338" />
 
-    <Button
-        android:id="@+id/tocharacterview"
-        android:layout_width="117dp"
-        android:layout_height="85dp"
-        android:text="SEE DETAILS"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText3"
+        android:layout_width="410dp"
+        android:layout_height="56dp"
+        android:hint="Ideals"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.435" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText4"
+        android:layout_width="411dp"
+        android:layout_height="58dp"
+        android:hint="Bonds"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.532" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText6"
+        android:layout_width="410dp"
+        android:layout_height="53dp"
+        android:hint="Flaws"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.623" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText5"
+        android:layout_width="411dp"
+        android:layout_height="69dp"
+        android:hint="About"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.719" />
 
     <Button
-        android:id="@+id/character_creator_page_two_back_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:backgroundTint="#00FFFFFF"
-        android:padding="0dp"
-        android:text="🔙"
-        android:textAlignment="center"
-        android:textSize="30sp"
+        android:id="@+id/button2"
+        android:layout_width="122dp"
+        android:layout_height="101dp"
+        android:text="See Details"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.771"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.09" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
