--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -16,7 +16,7 @@
             android:layout_width="343dp"
             android:layout_height="173dp"
             android:layout_marginTop="96dp"
-            android:backgroundTint="#FF0000"
+            android:backgroundTint="#E45349"
             android:text="Character⚔️"
             android:textColor="#FFFFFF"
             app:cornerRadius="0dp"
@@ -29,10 +29,10 @@
             android:layout_width="341dp"
             android:layout_height="167dp"
             android:layout_marginTop="492dp"
-            android:backgroundTint="#25681C"
+            android:backgroundTint="#53A844"
             android:text="Information 📖"
-            app:cornerRadius="0dp"
             android:textColor="#FFFFFF"
+            app:cornerRadius="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/main_menu_view_d_m_menu"
             android:layout_width="332dp"
             android:layout_height="183dp"
-            android:backgroundTint="#1541AF"
+            android:backgroundTint="#325CCC"
             android:text="Dungeon Master Menu 🎲"
             android:textColor="#FFFFFF"
             app:cornerRadius="0dp"
