--- a/app/src/main/res/layout/character_creator_page_two.xml
+++ b/app/src/main/res/layout/character_creator_page_two.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner3"
+        android:id="@+id/backgroundSpinner"
         android:layout_width="271dp"
         android:layout_height="62dp"
         android:entries="@array/backgrounds"
@@ -85,12 +85,13 @@
         android:id="@+id/spinner8"
         android:layout_width="271dp"
         android:layout_height="62dp"
+        android:entries="@array/personality"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.007"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.26" />
+        app:layout_constraintVertical_bias="0.224" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="408dp"
