--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -50,18 +50,16 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="150dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_race" />
 
     <Spinner
         android:id="@+id/character_creator_page_one_edit_subclass"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="150dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_class" />
 
     <Spinner
         android:id="@+id/character_creator_page_one_edit_class"
@@ -93,179 +91,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/character_creator_page_one_strength_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="STR"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@id/character_creator_page_one_spacer1"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_strength"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_strength" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_dexterity_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DEX"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@id/character_creator_page_one_spacer1"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_dexterity"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_dexterity" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_constitution_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CON"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@id/character_creator_page_one_spacer1"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_constitution"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_constitution" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_intelligence_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="INT"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_spacer2" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_wisdom_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="WIS"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_spacer2" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_charisma_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CHA"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_charisma"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_charisma"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_spacer2" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_strength"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="8"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_spacer1"
-        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_spacer1" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_intelligence"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:hint="8"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_spacer1"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_intelligence_display_text" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_wisdom"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:hint="8"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_wisdom_display_text" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_charisma"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:hint="8"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_charisma_display_text" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_dexterity"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:hint="8"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_strength"
-        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_edit_strength" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_constitution"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:hint="8"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_dexterity"
-        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_edit_dexterity" />
-
     <EditText
         android:id="@+id/character_creator_page_one_edit_health"
         android:layout_width="105dp"
         android:layout_height="50dp"
+        android:layout_marginStart="44dp"
         android:ems="10"
         android:hint="5"
         android:inputType="text"
         android:maxLength="3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_spacer1" />
-
-    <Space
-        android:id="@+id/character_creator_page_one_spacer1"
-        android:layout_width="20dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="240dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Space
-        android:id="@+id/character_creator_page_one_spacer2"
-        android:layout_width="190dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_spacer1"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_strength" />
+        tools:layout_editor_absoluteY="470dp" />
 
     <Button
         android:id="@+id/character_creator_page_one_minimum_health"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:text="Minimum Health"
         android:textSize="11.5sp"
@@ -304,64 +144,88 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/character_creator_page_one_racial_strength"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_strength"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_strength"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_strength" />
+    <ImageView
+        android:id="@+id/STRENGTH_ICON"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:adjustViewBounds="true"
+        android:background="@drawable/strength"
+        android:scaleType="centerCrop"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="210dp" />
 
     <TextView
-        android:id="@+id/character_creator_page_one_racial_intelligence"
+        android:id="@+id/STRENGTH_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_intelligence" />
+        android:layout_marginStart="30dp"
+        android:background="@color/white"
+        android:text="Strength"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/STRENGTH_ICON" />
+
+    <EditText
+        android:id="@+id/EDIT_STRENGTH"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="302dp" />
+
+    <ImageView
+        android:id="@+id/DEXTERITY_ICON"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/dexterity"
+        tools:layout_editor_absoluteX="139dp"
+        tools:layout_editor_absoluteY="210dp" />
 
     <TextView
-        android:id="@+id/character_creator_page_one_racial_wisdom"
+        android:id="@+id/DEXTERITY_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_intelligence" />
+        android:text="Dexterity"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/CONSTITUTION_TEXT"
+        app:layout_constraintStart_toEndOf="@id/STRENGTH_TEXT"
+        app:layout_constraintTop_toBottomOf="@id/DEXTERITY_ICON" />
+
+    <EditText
+        android:id="@+id/EDIT_DEXTERITY"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteY="302dp" />
+
+    <ImageView
+        android:id="@+id/CONSTITUTION_ICON"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/constitution"
+        tools:layout_editor_absoluteX="250dp"
+        tools:layout_editor_absoluteY="210dp" />
 
     <TextView
-        android:id="@+id/character_creator_page_one_racial_charisma"
+        android:id="@+id/CONSTITUTION_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_charisma"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_charisma"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_intelligence" />
+        android:layout_marginEnd="30dp"
+        android:text="Constitution"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="270dp" />
 
-    <TextView
-        android:id="@+id/character_creator_page_one_racial_dexterity"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/EDIT_CONSTITUTION"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:text="3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_dexterity"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_dexterity"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_strength" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_racial_constitution"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_constitution"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_constitution"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_strength" />
+        android:ems="10"
+        android:inputType="text"
+        tools:layout_editor_absoluteX="273dp"
+        tools:layout_editor_absoluteY="302dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
