--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/dragon_background"
     tools:context=".ActivityMain">
+
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
