--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -123,10 +123,11 @@
 
         <TextView
             android:id="@+id/Title"
-            android:layout_width="123dp"
-            android:layout_height="72dp"
+            android:layout_width="148dp"
+            android:layout_height="70dp"
             android:text="5e Manager"
-            android:textSize="25dp"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
