--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,7 +45,15 @@
     <action
         android:id="@+id/goToDMPlayerManager"
         app:destination="@id/DMPlayerManager" />
-
+    <action
+        android:id="@+id/goTospellsInformation"
+        app:destination="@id/spellsInformation" />
+    <action
+        android:id="@+id/goToweaponsInfomration"
+        app:destination="@id/weaponsInformation" />
+    <action
+        android:id="@+id/goToarmorInformation"
+        app:destination="@id/armorInformation" />
     <fragment
         android:id="@+id/MainMenu"
         android:name="com.example.dnd5emanager.MainMenu"
@@ -140,4 +148,19 @@
         android:name="com.example.dnd5emanager.DiceRoller"
         android:label="dice_roller"
         tools:layout="@layout/dice_roller" />
+    <fragment
+        android:id="@+id/spellsInformation"
+        android:name="com.example.dnd5emanager.spellsInformation"
+        android:label="fragment_spells_information"
+        tools:layout="@layout/fragment_spells_information" />
+    <fragment
+        android:id="@+id/weaponsInformation"
+        android:name="com.example.dnd5emanager.weaponsInformation"
+        android:label="fragment_weapons_information"
+        tools:layout="@layout/fragment_weapons_information" />
+    <fragment
+        android:id="@+id/armorInformation"
+        android:name="com.example.dnd5emanager.armorInformation"
+        android:label="fragment_armor_information"
+        tools:layout="@layout/fragment_armor_information" />
 </navigation>
